--- a/index.html
+++ b/index.html
@@ -57,11 +57,23 @@
 				
 		</nav>
 		<!-- End Header/Navigation -->
+<style>
+  .hero .row {
+    margin-right: -15px;
+    margin-left: -15px;
+  }
 
-		<!-- Start Hero Section -->
+  .hero .col-lg-5,
+  .hero .col-lg-7 {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+</style>
+
+<!-- Start Hero Section -->
 <div class="hero">
   <div class="container">
-    <div class="row justify-content-between align-items-center">
+    <div class="row justify-content-between">
       <div class="col-lg-5">
         <div class="intro-excerpt">
           <h1>Modern Interior <span class="d-block">Design Studio</span></h1>
@@ -78,7 +90,6 @@
   </div>
 </div>
 <!-- End Hero Section -->
-
 		<!-- Start Product Section -->
 		<div class="product-section">
 			<div class="container">
